src/main/java/com/example/stockservice/exception/error/KafkaErrorCodes.java
package com.example.stockservice.exception.error;


public class KafkaErrorCodes {
    public static final int REDIS_CONNECTION_CODE = 1000;
    public static final int BOLLINGER_BANDS_DESERIALIZATION_CODE = 1001;
    public static final int SMA_DESERIALIZATION_CODE = 1002;
    public static final int MACD_DESERIALIZATION_CODE = 1003;
    public static final int RSI_DESERIALIZATION_CODE = 1004;
    public static final int UNKNOWN_ERROR_CODE = 5000;
}
